Mathematics/GMS_sse_matrix.f90

    
    interface
          subroutine M4x4f32_mul_M4x4f32_inplace(mb,ma) &
                                     bind(c,name='M4x4f32_mul_M4x4f32_inplace')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mb
                type(M4x4f32), intent(in)    :: ma
          end subroutine M4x4f32_mul_M4x4f32_inplace
    end interface
    
    interface
         subroutine M4x4f32_mul_scalar(mb,ma,s) &
                                     bind(c,name='M4x4f32_mul_scalar')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)     :: mb
                type(M4x4f32), intent(in)        :: ma
                real(c_float), intent(in), value :: s
         end subroutine M4x4f32_mul_scalar
    end interface
    
    interface
        subroutine M4x4f32_mul_scalar_inplace(ma,s) &
                                    bind(c,name='M4x4f32_mul_scalar_inplace')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)     :: ma
                real(c_float), intent(in), value :: s
        end subroutine M4x4f32_mul_scalar_inplace
    end interface
    
    interface
        subroutine M4x4f32_negate(mb,ma) &
                                   bind(c,name='M4x4f32_negate')
                   import :: M4x4f32
                   type(M4x4f32), intent(inout) :: mb
                   type(M4x4f32), intent(in)    :: ma
        end subroutine M4x4f32_negate
    end interface
    
    interface
        subroutine M4x4f32_transpose(m) &
                                  bind(c,name='M4x4f32_transpose')
                   import :: M4x4f32
                   type(M4x4f32), intent(inout) :: m
        end subroutine M4x4f32_transpose
    end interface
    
    interface
        subroutine M4x4f32_rotateX(m,d) &
                                 bind(c,name='M4x4f32_rotateX')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: d
        end subroutine M4x4f32_rotateX
    end interface
    
    interface
        subroutine M4x4f32_rotateY(m,d) &
                                 bind(c,name='M4x4f32_rotateY')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: d
        end subroutine M4x4f32_rotateY
    end interface
    
    interface
        subroutine M4x4f32_rotateZ(m,d) &
                                  bind(c,name='M4x4f32_rotateZ')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: d
        end subroutine M4x4f32_rotateZ
    end interface
    
    interface
        subroutine M4x4f32_translate_xyz(m,x,y,z) &
                                    bind(c,name='M4x4f32_translate_xyz')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: x,y,z
        end subroutine M4x4f32_translate_xyz
    end interface 
    
    interface
        subroutine M4x4f32_scale_xyz(m,x,y,z) &
                                   bind(c,name='M4x4f32_scale_xyz')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: x,y,z
        end subroutine M4x4f32_scale_xyz
    end interface
    
    interface
        subroutine M4x4f32_scale_s(m,s) &
                                 bind(c,name='M4x4f32_scale_s')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   type(M4x4f32), intent(inout)     :: m
                   real(c_float), intent(in), value :: s
        end subroutine M4x4f32_scale_s
    end interface
    
    interface
        subroutine M4x4f32_minimum(minv,m) &
                                 bind(c,name='M4x4f32_minimum')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   real(c_float), intent(inout) :: minv
                   type(M4x4f32), intent(in)    :: m
        end subroutine M4x4f32_minimum
    end interface
    
    interface
        subroutine M4x4f32_maximum(maxv,m) &
                                 bind(c,name='M4x4f32_maximum')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   real(c_float), intent(inout) :: maxv
                   type(M4x4f32), intent(in)    :: m
        end subroutine M4x4f32_maximum
    end interface
    
    interface
        subroutine M4x4f32_det(det,m) &
                                 bind(c,name='M4x4f32_det')
                   use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   real(c_float), intent(inout) :: det
                   type(M4x4f32), intent(in)    :: m
        end subroutine M4x4f32_det
    end interface
    
    interface
         subroutine M4x4f32_inverse(inv,m) &
                                bind(c,name='M4x4f32_inverse')
                    use, intrinsic :: ISO_C_BINDING
                   import :: M4x4f32
                   real(c_float), intent(inout) :: inv
                   type(M4x4f32), intent(in)    :: m
         end subroutine M4x4f32_inverse
    end interface
    
    interface
         subroutine V1x4f32_setzero(va) &
                               bind(c,name='V1x4f32_setzero')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: va
         end subroutine V1x4f32_setzero
    end interface
    
    interface
         subroutine V1x4f32_setzero_stream(va) &
                               bind(c,name='V1x4f32_setzero_stream')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: va
         end subroutine V1x4f32_setzero_stream
    end interface
    
    interface
         subroutine V1x4f32_set1(va,s) &
                                bind(c,name='V1x4f32_set1')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32), intent(inout)     :: va
                    real(c_float), intent(in), value :: s
         end subroutine V1x4f32_set1
    end interface
    
    interface
         subroutine V1x4f32_set1_stream(va,s) &
                                bind(c,name='V1x4f32_set1_stream')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32), intent(inout)     :: va
                    real(c_float), intent(in), value :: s
         end subroutine V1x4f32_set1_stream
    end interface
    
    interface
         subroutine V1x4f32_set_scalars(va,s0,s1,s2,s3) &
                                 bind(c,name='V1x4f32_set_scalars')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32), intent(inout)     :: va
                    real(c_float), intent(in), value :: s0,s1,s2,s3
         end subroutine V1x4f32_set_scalars
    end interface
    
    interface
          subroutine V1x4f32_set_scalars_stream(va,s0,s1,s2,s3) &
                                 bind(c,name='V1x4f32_set_scalars_stream')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32), intent(inout)     :: va
                    real(c_float), intent(in), value :: s0,s1,s2,s3
         end subroutine V1x4f32_set_scalars_stream
    end interface
    
    interface
         subroutine V1x4f32_set_array(va,a) &
                                bind(c,name='V1x4f32_set_array')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32),                 intent(inout)     :: va
                    real(c_float), dimension(0:3), intent(in)        :: a
         end subroutine V1x4f32_set_array
    end interface
    
    interface
          subroutine V1x4f32_set_array_stream(va,a) &
                                bind(c,name='V1x4f32_set_array_stream')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32),                 intent(inout)     :: va
                    real(c_float), dimension(0:3), intent(in)        :: a
         end subroutine V1x4f32_set_array_stream
    end interface
    
    interface
         subroutine V1x4f32_set_V1x4f32(vb,va) &
                                bind(c,name='V1x4f32_set_V1x4f32')
                  
                    import :: V1x4f32
                    type(V1x4f32),                 intent(inout)     :: vb
                    type(V1x4f32),                 intent(in)        :: va
         end subroutine V1x4f32_set_V1x4f32
    end interface
    
    interface
         subroutine V1x4f32_set_V1x4f32_stream(vb,va) &
                                 bind(c,name='V1x4f32_set_V1x4f32_stream')
                    
                    import :: V1x4f32
                    type(V1x4f32),                 intent(inout)     :: vb
                    type(V1x4f32),                 intent(in)        :: va
         end subroutine V1x4f32_set_V1x4f32_stream
    end interface
    
    interface
         subroutine V1x4f32_set_M4x4f32(vb,ma,imm) &
                                bind(c,name='V1x4f32_set_M4x4f32')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    import :: M4x4f32
                    type(V1x4f32),  intent(inout)     :: vb
                    type(M4x4f32),  intent(in)        :: ma
                    integer(c_int), intent(in), value :: imm
         end subroutine V1x4f32_set_M4x4f32
    end interface
    
    interface
          subroutine V1x4f32_set_M4x4f32_stream(vb,ma,imm) &
                                bind(c,name='V1x4f32_set_M4x4f32_stream')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    import :: M4x4f32
                    type(V1x4f32),  intent(inout)     :: vb
                    type(M4x4f32),  intent(in)        :: ma
                    integer(c_int), intent(in), value :: imm
         end subroutine V1x4f32_set_M4x4f32_stream
    end interface
    
    interface
         subroutine V1x4f32_mul_M4x4f32(vc,vb,ma) &
                                bind(c,name='V1x4f32_mul_M4x4f32')
                    import :: V1x4f32
                    import :: M4x4f32
                    type(V1x4f32), intent(inout) :: vc
                    type(V1x4f32), intent(in)    :: vb
                    type(M4x4f32), intent(in)    :: ma
         end subroutine V1x4f32_mul_M4x4f32
    end interface
    
    interface
         subroutine V1x4f32_mul_M4x4f32_inplace(vb,ma) &
                                bind(c,name='V1x4f32_mul_M4x4f32_inplace')
                    import :: V1x4f32
                    import :: M4x4f32
                    type(V1x4f32), intent(inout) :: vb
                    type(M4x4f32), intent(in)    :: ma
         end subroutine V1x4f32_mul_M4x4f32_inplace
    end interface
